[project]
name = "certification-practice-mastery"
version = "0.2.0"
description = "Multi-agent AI system for adaptive certification exam preparation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "ddgs>=9.14.1",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
